# rxnGPT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yml  pyproject.toml  setup.py
configs/: finetuning.yaml  pretraining.yaml
data/: README.md  get_vocab.py
data/MIT_mixed/: token2label.json
experiments/: simple_pretraining.sh
src/: dataset.py  decoder.py  evaluation_script.py  sample_decoder.py  sample_prefix_lm.py  train_decoder.py  train_decoder_prefix.py  utils.py
src/rxngpt/: dataset.py  decoder.py  evaluation_script.py  sample_decoder.py  train_decoder.py  utils.py
